Fix undefined issue, optimizing page loading speed

--- a/theme/index.html
+++ b/theme/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-  <title>Landed by HTML5 UP</title>
+  <title>FUM Robotics Lab</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
   <link rel="stylesheet" href="assets/css/main.css"/>
@@ -19,7 +19,7 @@
 
   <!-- Header -->
   <header id="header">
-    <h1><img style="margin-top: 10px" src="images/fum-logo.png" height="50px"/></h1>
+    <h1 id="logo"><img style="margin-top: 10px" src="images/fum-logo.png" height="30px"/></h1>
     <nav id="nav">
       <ul>
         <li><a href="#banner">Home</a></li>
@@ -40,7 +40,7 @@
         <p>We <span style="background-color: brown; font-weight:bold"> bridge</span> the imagination and reality<br/>
         </p>
       </header>
-      <span class="image"><img src="images/Robot.png" alt=""/></span>
+      <span  class="image"><img src="images/Robot.png" alt=""/></span>
     </div>
     <a href="#about" class="nextButton goto-next scrolly">Next</a>
   </section>
